Closed Bug 173867 Opened 23 years ago Closed 23 years ago

http expires header with date-in-past causes miscalculation

Categories

(Core :: Networking: HTTP, defect, P2)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: tever, Assigned: skasinathan)

References

()

Details

(Keywords: topembed+, Whiteboard: [http/1.1] [adt2])

Attachments

(2 files)

Overview Description: An http expires header with a date in the past sometimes causes browser to miscalculate the expiration time of a page. In this case, I send out an expires of 'Thu, 01 Dec 1969 16:00:00 GMT' which the browser interprets as a future date of '01/06/06 14:28:15'. This causes the stale version of the page to be pulled from cache when it should be coming from the network. Steps to Reproduce: 1.) click on the url to send out the expires: '1969' header to the browser (sorry, internal only) 2.) type about:cache to check the expires date Actual Results: date is miscalculated to the year 2006 Build Date & Platform Bug Found: 2002101015 winNT Additional Builds and Platforms Tested On: works on mac osX linux rh6 and rh7.1 gives me expires: can't get timezone
tever: HTTP/1.1 requires a Date header. can you try adding a Date header to see if that fixes the problem? we may be having this problem only when there is no Date header.
darin: I added the header "Date: Friday, 11-Oct-02 12:12:12 GMT" and I am still seeing the same thing. The expires is still ending up as year 06.
ok, thanks for trying that tom. i'll take it from here.
Severity: normal → major
Status: NEW → ASSIGNED
Keywords: nsbeta1, topembed
Priority: -- → P2
Whiteboard: [http/1.1]
Target Milestone: --- → mozilla1.2beta
QA Contact: httpqa → tever
-> moz 1.3
Target Milestone: mozilla1.2beta → mozilla1.3alpha
This does not seem specific to embeddors. Topembed-/nsbeta1+.
Whiteboard: [http/1.1] → [http/1.1] [adt2]
no, but it may cause site compatibility issues, and it is a standards violation. i would think embedders would care about such things. re-nominating.
Keywords: topembed-topembed
Marking topembed+ as result of Topembed triage
Keywords: topembedtopembed+
Target Milestone: mozilla1.3alpha → mozilla1.3beta
-> suresh
Assignee: darin → suresh
Status: ASSIGNED → NEW
Target Milestone: mozilla1.3beta → ---
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4alpha
Attached patch patch attached.Splinter Review
The problem is PR_ParseTimeString returns negative number for this case.
Attachment #113139 - Flags: superreview?(darin)
Attachment #113139 - Flags: review?(dougt)
Comment on attachment 113139 [details] [diff] [review] patch attached. suresh: looks good, but please keep the indentation consistent with the rest of the file. thx! sr=darin
Attachment #113139 - Flags: superreview?(darin) → superreview+
Attachment #113139 - Flags: review?(dougt) → review+
fixed in trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified: 2003040708 win NT trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: