bug 173867 - http expires header with date-in-past causes miscalculation. r-dougt, sr-darin.